--- a/index.html
+++ b/index.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>My App</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.2.3/css/bulma.css">
-    
-    <style>
-        body { padding-top: 40px; }
-    </style>
 </head>
+
 <body>
     <div id="root" class="container">
-        <tabs>
-            <tab name="About Us" :selected="true">
-                <h1>Here is the content for the about us tab.</h1>
-            </tab>
+        <modal>
+            <template slot="header">
+                My Title
+            </template>
 
-            <tab name="About Our Culture">
-                <h1>Here is the content for the about our culture tab.</h1>
-            </tab>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore cum, delectus quas possimus sint quisquam et, quam quia omnis, autem quae ipsa qui ex earum facilis sequi quidem mollitia culpa?
 
-            <tab name="About Our Vision">
-                <h1>Here is the content for the about our vision tab.</h1>
-            </tab>
-        </tabs>
+            <template slot="footer">
+                <a class="button is-primary">Save changes</a>
+                <a class="button">Cancel</a>
+            </template>
+        </modal>
     </div>
 
     <script src="https://unpkg.com/vue@2.1.3/dist/vue.js"></script>
