--- a/vue-udemy/module-2/index2.html
+++ b/vue-udemy/module-2/index2.html
@@ -1,7 +1,7 @@
 
 <!-- Put this in the HTML section in JSFiddle! -->
 <div id="app">
-    <button v-on:click="increase">Click me</button>
+    <button v-on:click="increase(2, $event)">Click me</button>
     <p>{{counter}}</p>
     <p v-on:mousemove="updateCoordinates">{{x}} / {{y}}</p>
 </div>
