--- a/vue-udemy/module-2/index2.html
+++ b/vue-udemy/module-2/index2.html
@@ -3,7 +3,9 @@
 <div id="app">
     <button v-on:click="increase(2, $event)">Click me</button>
     <p>{{counter}}</p>
-    <p v-on:mousemove="updateCoordinates">{{x}} / {{y}}</p>
+    <p v-on:mousemove="updateCoordinates">{{x}} / {{y}}
+        <span v-on:mousemove="doNothing">DEAD SPOT</span>
+    </p>
 </div>
 
 <script src="https://unpkg.com/vue/dist/vue.js"></script>
