--- a/vue-udemy/module-2/index2.html
+++ b/vue-udemy/module-2/index2.html
@@ -4,7 +4,7 @@
     <button v-on:click="increase(2, $event)">Click me</button>
     <p>{{counter}}</p>
     <p v-on:mousemove="updateCoordinates">{{x}} / {{y}}
-        <span v-on:mousemove="doNothing">DEAD SPOT</span>
+        <span v-on:mousemove.stop="">DEAD SPOT</span>
     </p>
 </div>
 
