--- a/vue-udemy/module-2/index2.html
+++ b/vue-udemy/module-2/index2.html
@@ -2,7 +2,8 @@
 <!-- Put this in the HTML section in JSFiddle! -->
 <div id="app">
     <button v-on:click="increase(2, $event)">Click me</button>
-    <p>{{counter}}</p>
+    <button v-on:click="counter++">Click me</button>
+    <p>{{counter > 10 ? 'greater':'smaller'}}</p>
     <p v-on:mousemove="updateCoordinates">{{x}} / {{y}}
         <span v-on:mousemove.stop="">DEAD SPOT</span>
     </p>
