one way of doing the the same thing.

--- a/vue-udemy/module-2/index4.html
+++ b/vue-udemy/module-2/index4.html
@@ -1,10 +1,10 @@
 
 <!-- Put this in the HTML section in JSFiddle! -->
 <div id="app">
-    <button v-on:click="increase">Increase</button>
-    <button v-on:click="decrease">Decrease</button>
+    <button v-on:click="counter++">Increase</button>
+    <button v-on:click="counter--">Decrease</button>
     <p>Counter : {{counter}}</p>
-     <p>Result : {{result}}</p>
+     <p>Result : {{result()}}</p>
 </div>
 
 <script src="https://unpkg.com/vue/dist/vue.js"></script>
