added a new counter. this is good but vue will reload result method everytime. that is because vue does not know that result only depends on counter, so even if you change second counter the result methdo is re rendered.

--- a/vue-udemy/module-2/index4.html
+++ b/vue-udemy/module-2/index4.html
@@ -3,6 +3,7 @@
 <div id="app">
     <button v-on:click="counter++">Increase</button>
     <button v-on:click="counter--">Decrease</button>
+    <button v-on:click="secondCounter++">Increase 2nd counter</button>
     <p>Counter : {{counter}}</p>
      <p>Result : {{result()}}</p>
 </div>
