--- a/vue-udemy/module-2/index4.html
+++ b/vue-udemy/module-2/index4.html
@@ -5,7 +5,7 @@
     <button v-on:click="counter--">Decrease</button>
     <button v-on:click="secondCounter++">Increase 2nd counter</button>
     <p>Counter : {{counter}}</p>
-     <p>Result : {{result()}}</p>
+     <p>Result : {{result()}} || {{output}}</p>
 </div>
 
 <script src="https://unpkg.com/vue/dist/vue.js"></script>
