--- a/vue-udemy/module-2/index6.html
+++ b/vue-udemy/module-2/index6.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="css5.css"><div id="app">
   <div class="demo" v-bind:style="myStyle"></div>
   <div class="demo" :style="myStyle"></div>
-  <div class="demo"></div>
+  <div class="demo" :style="[myStyle, {height : width + 'px'}]"></div>
   <hr>
   <input type="text" v-model="color">
   <input type="text" v-model="width">
