--- a/vue-udemy/Module3/index.html
+++ b/vue-udemy/Module3/index.html
@@ -5,6 +5,13 @@
 <div id="app">
 	<p v-if="show">You can see me!</p>
 	<p v-else>You cannot see if</p>
+	<template v-if="show">
+		<p>Inside a template</p>
+		<p>Inside a template</p>
+		<p>Inside a template</p>
+		<p>Inside a template</p>
+		<p>Inside a template</p>
+	</template>
 	<p>Do you also see me?</p>
 	<button v-on:click="show = !show">Switch</button>
 </div>
