--- a/vue-udemy/Module3/index.html
+++ b/vue-udemy/Module3/index.html
@@ -12,7 +12,7 @@
 		<p>Inside a template</p>
 		<p>Inside a template</p>
 	</template>
-	<p>Do you also see me?</p>
+	<p v-show="show">Do you also see me?</p>
 	<button v-on:click="show = !show">Switch</button>
 </div>
 
