--- a/vue-udemy/Module3/index2.html
+++ b/vue-udemy/Module3/index2.html
@@ -14,6 +14,10 @@
         </li>
     </ul>
 
+    <ul>
+        <li v-for="n in 10">{{n}}</li>
+    </ul>
+
     <template v-for="(ingredient,i) in ingredients">
         <h1>{{ingredient}}</h1>
         <p>{{i}}</p>
