--- a/vue-udemy/Module3/index2.html
+++ b/vue-udemy/Module3/index2.html
@@ -2,9 +2,10 @@
 
 <div id="app">
     <ul>
-        <li v-for="(ingredient,i) in ingredients">{{ingredient}} (({{i}}))</li>
+        <li v-for="(ingredient,i) in ingredients" :key="ingredient">{{ingredient}} (({{i}}))</li>
     </ul>
 
+    <button v-on:click="ingredients.push('spices')">Add new </button>
     <hr>
     <hr>
 
