--- a/vue-udemy/module5/index.html
+++ b/vue-udemy/module5/index.html
@@ -8,9 +8,7 @@
 
 <div id="app2">
   <h1 ref="heading">{{ title }}</h1>
-  <button @click="onChange">Change something in vue 1</button>
-  <button v-on:click="show">Show Paragraph</button>
-  <p v-if="showParagraph">This is not always visible</p>
+  <button v-on:click="onChange">Change something in vue 1</button>
 </div>
 
 <script src="app.js"></script>
