--- a/vue-udemy/module5/index.html
+++ b/vue-udemy/module5/index.html
@@ -11,4 +11,8 @@
   <button v-on:click="onChange">Change something in vue 1</button>
 </div>
 
+<div id="app3">
+  
+</div> 
+
 <script src="app.js"></script>
