vue templates intro

--- a/vue-udemy/module5/index.html
+++ b/vue-udemy/module5/index.html
@@ -9,10 +9,16 @@
 <div id="app2">
   <h1 ref="heading">{{ title }}</h1>
   <button v-on:click="onChange">Change something in vue 1</button>
+  <hello></hello>
+  <hello></hello>
+
 </div>
 
 <div id="app3">
-  
+
 </div> 
+
+  <hello></hello>
+
 
 <script src="app.js"></script>
