--- a/vue-udemy/module6/index.html
+++ b/vue-udemy/module6/index.html
@@ -6,4 +6,10 @@
     <my-component></my-component>
 </div>
 
+<div id="app2">
+    <my-component></my-component>
+    <my-component></my-component>
+</div>
+
+
 <script src="app.js"></script>
